trying to fix overflow issues for mobile

--- a/themes/wiremod/static/css/main.css
+++ b/themes/wiremod/static/css/main.css
@@ -74,8 +74,11 @@ html {
 
 body {
 	background: #eee;
-	overflow-x: hidden;
 	font-family: "Raleway";
+}
+
+article {
+	overflow-x: hidden;
 }
 
 h1 {
